@@ -63,7 +63,7 @@ RUN wget --no-check-certificate --no-cookies --header="Cookie: oraclelicense=acc
   && rm -rf /tmp/jdk1.6.0_45
 
 #========================================
-# 添加普通用户
+# add user
 #========================================
 RUN useradd pinpoint \
          --shell /bin/bash  \
@@ -72,6 +72,9 @@ RUN useradd pinpoint \
   && echo 'ALL ALL = (ALL) NOPASSWD: ALL' >> /etc/sudoers \
   && echo 'pinpoint:pinpoint' | chpasswd
 
+#========================================
+# change user
+#========================================
 USER pinpoint
 
 #========================================
@@ -140,58 +143,3 @@ EXPOSE 16010 18080 28080 9994 9995/udp 9996/udp
 
 # 运行脚本，启动sshd服务
 CMD ["/opt/bin/run.sh"]
-
-
-
-
-# 配置ssh免密登录
-# 配置时间
-# java环境变量写入profile文件
-# 解压war包
-RUN yum install -y openssh-server openssh-clients  net-tools tzdata unzip \
- && sed -i 's/UsePAM yes/UsePAM no/g' /etc/ssh/sshd_config \
- && echo "root:123456" | chpasswd \
- && ssh-keygen -t dsa -f /etc/ssh/ssh_host_dsa_key \
- && ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key \
- && sed -i 's/session    required     pam_loginuid.so/#session    required     pam_loginuid.so/g' /etc/pam.d/sshd \
- && mkdir /var/run/sshd \
- && sed -i 's|ZONE="Etc/UTC"|ZONE="Asia/Shanghai"|g' /etc/sysconfig/clock \
- && echo 'Asia/Shanghai' >> /etc/timezone \
- && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
- && echo "JAVA_HOME=\"/usr/local/java/jdk1.8.0_161\"" >> /etc/profile \
- && echo "export JAVA_HOME" >> /etc/profile \
- && echo "export PATH=\"$PATH:$JAVA_HOME/bin\"" >> /etc/profile \
- && rm -rf /www/tomcat/pp-col-tomcat/webapps/* \
- && unzip /www/war/pinpoint-collector-1.7.1.war -d /www/tomcat/pp-col-tomcat/webapps/ROOT \
- && rm -rf /www/tomcat/pp-web-tomcat/webapps/* \
- && unzip /www/war/pinpoint-web-1.7.1.war -d /www/tomcat/pp-web-tomcat/webapps/ROOT \
- && rm -rf /www/war \
- && yum clean all
-
-
-# 配置Hbase、pinpoint
-# 1、新建数据文件夹，并修改配置文件
-# 2、修改pp-col-tomcat访问端口、pp-web-tomcat访问端口
-# 3、赋脚本执行权限
-RUN mkdir -p /www/data \
- && sed -i 's|# export JAVA_HOME=/usr/java/jdk1.6.0/|export JAVA_HOME=/usr/local/java/jdk1.8.0_161|g' /www/hbase/conf/hbase-env.sh \
- && sed -i 's|</configuration>|    <property>\r\n        <name>hbase.rootdir</name>\r\n        <value>file:///data/hbase</value>\r\n    </property>\r\n</configuration>|g' /www/hbase/conf/hbase-site.xml \
- && sed -i 's|export HBASE_MASTER_OPTS="$HBASE_MASTER_OPTS -XX:PermSize=128m -XX:MaxPermSize=128m"|#export HBASE_MASTER_OPTS="$HBASE_MASTER_OPTS -XX:PermSize=128m -XX:MaxPermSize=128m"|g' /www/hbase/conf/hbase-env.sh \
- && sed -i 's|export HBASE_REGIONSERVER_OPTS="$HBASE_REGIONSERVER_OPTS -XX:PermSize=128m -XX:MaxPermSize=128m"|#export HBASE_REGIONSERVER_OPTS="$HBASE_REGIONSERVER_OPTS -XX:PermSize=128m -XX:MaxPermSize=128m"|g' /www/hbase/conf/hbase-env.sh \
- && sed -i 's/port="8005"/port="18005"/g' /www/tomcat/pp-col-tomcat/conf/server.xml \
- && sed -i 's/port="8080"/port="18080"/g' /www/tomcat/pp-col-tomcat/conf/server.xml \
- && sed -i 's/port="8443"/port="18443"/g' /www/tomcat/pp-col-tomcat/conf/server.xml \
- && sed -i 's/port="8009"/port="18009"/g' /www/tomcat/pp-col-tomcat/conf/server.xml \
- && sed -i 's/redirectPort="8443"/redirectPort="18443"/g' /www/tomcat/pp-col-tomcat/conf/server.xml \
- && sed -i 's/port="8005"/port="28005"/g' /www/tomcat/pp-web-tomcat/conf/server.xml \
- && sed -i 's/port="8080"/port="28080"/g' /www/tomcat/pp-web-tomcat/conf/server.xml \
- && sed -i 's/port="8443"/port="28443"/g' /www/tomcat/pp-web-tomcat/conf/server.xml \
- && sed -i 's/port="8009"/port="28009"/g' /www/tomcat/pp-web-tomcat/conf/server.xml \
- && sed -i 's/redirectPort="8443"/redirectPort="28443"/g' /www/tomcat/pp-web-tomcat/conf/server.xml \
- && chmod u+x /www/script/run.sh
-
-# 开放端口组，ssh(22)，hbase(16010)，pp-col(18080)，pp-web(28080)
-EXPOSE 22 16010 18080 28080 9994 9995/udp 9996/udp
-
-# 运行脚本，启动sshd服务
-CMD ["/www/script/run.sh"]
